messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-blue
  labels:
    app: django-messaging
    environment: blue
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-green
  labels:
    app: django-messaging
    environment: green
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: green
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
