messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: messagin.local
      - http:
          paths:
            -path: /api/?(.*)
             pathType: Prefix
             backend:
               service:
                 name: messaging-app-service
                 port:
                   number: 8000
